# chainaim-outcome-verified-settlement-ext

./: .dockerignore  .gitignore  DESIGN_ext-build-plan_2026-07-09.md  Dockerfile  README.md  pyproject.toml
DESIGN/: ph2-combo-1_chat-session-log_2026-07-10T0232Z.md
services/settlement-verifier/: SKILL.md  app.py  pyproject.toml  smoke.py
services/settlement-verifier/demo_data/: committed_reference.json  delivery_bad.json  delivery_good.json
services/settlement-verifier/tests/: conftest.py  test_app.py
